BitcoinCore Change Log
======================

Version 3.0.0
  - SendHeaders message support (BIP 130)
  - Segregated Witness support (BIP 141, BIP 143, BIP 144)


Version 2.1.2
  - Increase 'addr' message size to 1000 entries


Version 2.1.1

  - Remove transaction signature count restriction
  - Support Version 3 blocks (transaction version is still 1)
